# FletcherFiltering

./: .gitignore  README.md  build-wheel.sh  docker-compose.yml  generate_data_tests.py  report_avg_string_lengths.py  requirements-test.txt  requirements.txt  run-fletchgen.sh  run-pytest.sh  run_pytest.ps1  setup.py  xsimoutputtest.py
_old/schema-test/: schema_test.py
codegen/: codegen.sln  requirements-test.txt  requirements.txt  setup.py
codegen-cpp/: CMakeLists.txt  fletcherfiltering.cpp  fletcherfiltering.h  hls_stream_autopilot.h  main.cpp  query.cpp  query.h  query_test.cpp  query_test.h
codegen/codegen/: __init__.py  __main__.py  compiler.py  requirements.txt
codegen/parser-test/: parser-test.pyproj  parser_test.py  parser_test_module.py  parser_test_typed_ast.py
codegen/schema-test/: schema-test.pyproj  schema_test.py
codegen/tests/: test_compiler.py  test_settings.py
hostside/: install-arrow.sh
hostside/cpp/: CMakeLists.txt  Makefile
hostside/cpp/src/: run-snap.cpp
hostside/python/: run-snap.py
snap_projects/: create_project.sh  run_fletchgen.sh  run_vhdeps.sh  snap_package.sh  snap_script.sh
snap_projects/_base/: Kernel.vhd
src/fletcherfiltering/: settings.py
tests/: conftest.py  test_compiler.py  test_settings.py
tests/data_generation/: BaseGenerator.py  FloatGenerator.py  IntGenerator.py  SentenceGenerator.py  UIntGenerator.py
tests/helpers/: base_query.py  ctypes_type_mapper.py  mysql_type_mapper.py  process_runner.py  python_class_generator.py  struct_type_mapper.py  xsim_output_reader.py
tests/queries/: __init__.py  (+7 more)
(+83 files in other folders)
